# boat

./: .gitignore  125LINE_PROJECT_STATUS_NOTEBOOKLM_20260313.txt  BET_PROJECT_STATUS.md  CODEX_START_HERE.md  C_BOAT_CANONICAL_PLAN.md  DB_STATUS.md  FROM_I5_TO_ME.md  FROM_INS14_TO_ME.md  I5_START.md  INS14_START.md  LOGIC_ASSET_MODEL.md  LOGIC_STATUS.md  OPERATING_MODEL.md  PORTABLE_RUNTIME.md  PROJECT_STATUS.md  PROJECT_STATUS_NOTEBOOKLM_20260313.txt  PROJECT_TIMELINE.md  RACER_INDEX_STATUS.md  README.md  ROOT_DOC_MAP.md  R_CONCEPT.md  TO_I5_FROM_ME.md  TO_INS14_FROM_ME.md  pyproject.toml  resume_q2_trifecta_collect_20260313.cmd  run_daily_recent_collect.ps1  run_live_trigger_cli_loop.cmd  run_live_trigger_cli_ui.cmd  setup_runtime.cmd  verify_logging.py  verify_print.py
GPT/: README.md  gemini.md  prompt_ideal.md
copy/: .gitignore  README.md
docs/: db_layers.md
forward/: 125_monitor.py  README.md  c2_monitor.py
live_trigger/: .env.example  AIR_BET_AUDIT_RUNBOOK.md  AUTO_BET_SYSTEM_RUNBOOK.md  BOX_GO_RUNTIME_CONCEPT.md  FORWARD_TEST_RESPONSE_RUNBOOK.md  IMPROVEMENT_NOTES.md  PORTABLE_BUNDLE.md  PROJECT_RULES.md  README.md  SELF_HEALING_AUTO_BET_VISION.md  TELEBOAT_LOGIN_STATUS.md  app.py  forward_test_snapshot.py  requirements.txt  run_app.cmd  run_app_ui.cmd  run_auto_cycle.cmd  run_auto_ui.cmd  run_forward_snapshot.cmd  shared_contract.py
live_trigger_cli/: README.md  __init__.py  app.py  cli.py  run_ui.cmd  runtime.py
live_trigger_cli_split/: README.md  cli.py  run_bet_loop.cmd  run_sync_loop.cmd  runtime.py
live_trigger_fresh_exec/: README.md  (+1 more)
(+274 files in other folders)
