[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "boat-race-data"
version = "0.1.0"
description = "Official BOAT RACE data collection pipeline for analytics and backtesting."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "beautifulsoup4>=4.14.0",
  "duckdb>=1.5.0",
  "requests>=2.32.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0.0",
]
app = [
  "streamlit>=1.55.0",
]

[project.scripts]
boat-data = "boat_race_data.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
